--- a/report/report.bib
+++ b/report/report.bib
@@ -1,4 +1,34 @@
 @PREAMBLE{
- "\providecommand{\noopsort}[1]{}" 
- # "\providecommand{\singleletter}[1]{#1}%" 
+ "\providecommand{\noopsort}[1]{}"
+ # "\providecommand{\singleletter}[1]{#1}%"
+}
+
+@misc{chepkemoi_how_2018,
+    title = {How is an {Olympic} {Host} {City} {Chosen}?},
+    url = {https://www.worldatlas.com/articles/how-is-an-olympic-host-city-chosen.html},
+    journal = {WorldAtlas},
+    author = {Chepkemoi, Joyce},
+    month = may,
+    year = {2018},
+}
+
+@misc{foursquare,
+	title = {Foursquare {API}},
+	url = {https://developer.foursquare.com/docs/places-api/},
+	urldate = {2020-03-26},
+	journal = {Foursquare API},
+}
+
+@misc{un_pop,
+	title = {United Nations Statistics Division - Demographic Yearbook 2018},
+    journal = {United Nations Statistics Division},
+	url = {https://unstats.un.org/unsd/demographic-social/products/dyb/dyb_2018/},
+}
+
+@misc{wiki_hosts,
+	title = {Bids for Olympic Games --- {W}ikipedia{,} The Free Encyclopedia},
+	author = "{Wikipedia contributors}",
+    year = "2004",
+    journal = {Wikipedia},
+	url = {https://en.wikipedia.org/wiki/Bids_for_Olympic_Games},
 }
