Changed report title

--- a/report/report.tex
+++ b/report/report.tex
@@ -23,7 +23,7 @@ floatfix
 
 \preprint{APS/123-QED}
 
-\title{Comparing Olympic Host Cities' Availability of Entertain and Dining Venues}
+\title{Olympic Host Viability From Foursquare Venue Data}
 
 \author{John Truong}
 \affiliation{%
